syntax = "proto2";
package msg;
import "serialize.proto";
import "texas.proto";

message TanTanLeRoom {
    optional int32 tid = 1;
}

// 创建房间
message C2GW_ReqCreateRoom {
    optional int32 gamekind = 1;            // 游戏类型
    optional TanTanLeRoom tantanle = 2;     // 弹弹乐
    optional TexasPersonalRoom texas = 3;   // 德州游戏
}

// 创建房间返回
message GW2C_RetCreateRoom {
    optional string errcode = 1;
    optional int64 roomid = 2;
    optional string passwd = 3;
}

// GW2MS 请求创建游戏房间
message GW2MS_ReqCreateRoom {
    optional int64 userid = 1;
    optional int32 gamekind = 2;
    optional TexasPersonalRoom texas = 3;
}

// 
message MS2GW_RetCreateRoom {
    optional int64 userid = 1;
    optional int64  roomid = 2;
    optional string errcode = 3;
    optional string roomagent = 4;
}


//通知Room创建游戏房间
message MS2RS_CreateRoom {
    optional int64 userid = 1;      // 玩家id
    optional int64 roomid = 2;      // 房间id
    optional int32 gamekind = 3;    // 游戏模式
    optional int32 sidgate = 4;     // 
    optional TexasPersonalRoom texas = 5;
}

//创建返回
message RS2MS_RetCreateRoom {
    optional int64 roomid = 1;
    optional int64 userid = 2;
    optional int32  sidgate = 3;
    optional string errcode = 4;
}

// 通知删除房间
message RS2MS_DeleteRoom {
    optional int64 roomid = 1;
}

// GW2RS 发送个人信息到游戏房间
message GW2RS_UploadUserBin   {
    optional int64 roomid = 1;
    optional int64 userid = 2;
    optional msg.Serialize bin = 3;     // TODO: 玩家数据没必要全部发送
}

// C2GW 进入房间
message C2GW_ReqEnterRoom {
    optional int64 userid = 1;      // 玩家uid
    optional int64 roomid = 2;      // 房间唯一id
    optional string passwd = 3;     // 密码
}

// RS2GW 进入房间返回
message RS2GW_RetEnterRoom {
    optional int64 userid = 1;      // 玩家uid
    optional int32 kind = 2;        // 游戏kind
    optional int64 roomid = 3;      // 房间唯一id
    optional int32 roomtid = 4;     // tid
    optional string passwd = 5;     // 密码
    optional string errcode = 6;    //
}

// C2GW 退出游戏房间
message C2GW_ReqLeaveRoom {
    optional int64 userid = 1;      // 玩家uid
}

// GW2C 退出游戏房间
message GW2C_RetLeaveRoom {
}

// RS2GW 离开房间，下发玩家个人数据到网关
message RS2GW_UserLeaveRoom {
    optional int64 userid = 1;
    optional msg.Serialize bin = 2;
}

// 房间销毁
message RS2GW_PushRoomDestory {
    optional int64 roomid = 1;
    optional int64 userid = 2;
    optional msg.Serialize bin = 3;
}

// 房间销毁
message GW2C_PushRoomDestory {
    optional int64 roomid = 1;
}

//请求当前房间信息
message C2GW_ReqCurRoom {
}

message GW2C_RetCurRoom {
    optional int64 roomuid = 1;
}
